--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,6 @@
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
+  font-family: 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
   -webkit-font-smoothing: antialiased;
@@ -11,3 +11,39 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+
+nav {
+  display: flex;
+  align-items: center;
+  background-color: #E0CCBD;
+  height: 90px;
+  padding: 30px 25px;
+}
+
+.nav--icon {
+  height: 100%;
+  padding: 7px;
+}
+
+.nav--cart {
+  height: 40%;
+  margin-right: 7px;
+  padding: 10px;
+}
+
+.nav--search {
+  width: 70%;
+  padding: 20px;
+}
+
+.nav-input {
+  display: flex;
+  position: static;
+  float: none;
+  width: 100%;
+}
+
+.nav--text {
+  padding: 10px;
+} 
